--- a/css/vote.css
+++ b/css/vote.css
@@ -8,7 +8,9 @@ body {
     min-height: 300px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #efece9;
+    background-color: #00000014;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 
 /* Header style */
@@ -86,14 +88,18 @@ a {
 
 /* End of navbar1 style */
 #vote-con{
-    border-radius: 30px;
+    margin: 0px auto;
+    width: 80%;
+    border-radius: 5px;
     box-shadow: 0 0 10px black;
     padding: 20px;
-    margin-top: 150px;
+    background-color: #f1f1f1;
 }
 .question-polldate{
+    /* display: flex;
+    justify-content: space-between; */
+    flex-direction: column;
     display: flex;
-    justify-content: space-between;
 }
 .status-enddate{
     color: #918181;
@@ -126,7 +132,7 @@ input[type="submit"] {
     background-color: #4caf50;
     color: #fff;
     padding: 12px 20px;
-    font-size: 18px;
+    font-size: 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -135,4 +141,9 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #45a049;
+}
+
+#login-vote{
+    color: #ff0000c2;
+    text-decoration: underline;
 }
