--- a/css/create-poll.css
+++ b/css/create-poll.css
@@ -10,25 +10,35 @@ body {
     margin-right: auto;
     margin-left: auto;
 }
+#con{
+    padding-top: 94px;
+}
+
 
 /* Header style */
 header {
-    background-color: rgb(60, 60, 60);
+    position: fixed;
+    width: 1024px;
+     top: 0;
+    background-color: rgb(0, 0, 0);
     max-height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid white;
-    width: 1024px;
 }
-
 /* End of header style */
 
-/* Logo style */
 
+/* Logo style */
 .logo {
     padding: 10px 20px;
     margin: 10px 10px;
+    text-align: center;
+}
+.logo1{
+    width: 150px;
+    margin: 0px auto;
     text-align: center;
 }
 
@@ -53,7 +63,7 @@ header .nav1 {
 }
 
 header .nav1 a {
-    margin-right: 20px;
+    margin-right: 15px;
     color: white;
 }
 
@@ -61,25 +71,29 @@ header .nav1 .myButton1 {
     margin-left: 30px;
     border: 1px solid white;
     padding: 6px 25px;
+    border-radius: 5px;
 }
 
 header .nav1 .myButton1:hover {
-    background-color: rgba(255, 173, 173, 0.233);}
+    background-color: white;
+    color: black;
+}
 
 header .nav1 .myButton {
     margin-left: 30px;
     border: 1px solid white;
     padding: 6px 25px;
+    border-radius: 5px;
 }
 
 header .nav1 .myButton:hover {
-    background-color: rgba(255, 173, 173, 0.233);
+    background-color: white;
+    color: black;
 }
 
 a {
     text-decoration: none;
 }
-
 /* End of navbar1 style */
 
 span {
@@ -110,7 +124,6 @@ span {
 
 #customAlert {
     margin: 0px 0 10px 0;
-    /* width: 100%; */
     padding: 0 0 0 10px;
     border: 1px solid #d2d1db;
     color: #2f66a1;
@@ -132,17 +145,20 @@ span {
 
 form {
     background-color: #f1f1f1;
-    box-shadow: 0 0 5px black;
+    box-shadow: 0 0 10px black;
     padding: 25px;
     border-radius: 5px;
-    border: 1px solid;
-    margin: 35px auto;
+    margin: 60px auto 50px auto;
     width: 70%;
     min-height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-size: 23px;
+}
+
+#create-poll-form{
+    padding-top: 20px;
 }
 
 .bx {
@@ -205,19 +221,23 @@ form label {
 }
 
 .sbt {
-    border: 1.5px solid;
-    border-radius: 5px;
-    padding: 5px 30px;
-    background-color: #f7f7f7;
+    background-color: #4caf50;
+    color: #fff;
+    padding: 12px 20px;
+    font-size: 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .sbt:hover {
-    cursor: pointer;
-    box-shadow: 0 0 5px black;
+    background-color: #45a049;
+
 }
 .sbt:active {
     cursor: pointer;
-    background-color: white;
+    background-color: #5db160;
 }
 
 @media(max-width:768px) {
