--- a/css/create-poll.css
+++ b/css/create-poll.css
@@ -11,8 +11,9 @@ body {
     margin-left: auto;
 }
 #con{
-    padding-top: 100px;
+    padding-top: 94px;
 }
+
 
 /* Header style */
 header {
@@ -26,7 +27,6 @@ header {
     align-items: center;
     border-bottom: 1px solid white;
 }
-
 /* End of header style */
 
 
@@ -221,19 +221,23 @@ form label {
 }
 
 .sbt {
-    border: 1.5px solid;
-    border-radius: 5px;
-    padding: 5px 30px;
-    background-color: #f7f7f7;
+    background-color: #4caf50;
+    color: #fff;
+    padding: 12px 20px;
+    font-size: 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .sbt:hover {
-    cursor: pointer;
-    box-shadow: 0 0 5px black;
+    background-color: #45a049;
+
 }
-/* .sbt:active {
+.sbt:active {
     cursor: pointer;
-    background-color: white;
+    background-color: #5db160;
 }
 
 @media(max-width:768px) {
