This new update for icon, now you can click on the icon in signin or signup to go to the home page.

--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,9 @@ header {
     margin: 0px auto;
     text-align: center;
 }
-
+.toIndex{
+    text-decoration: none;
+}
 .poll {
     font-size: 2em;
     color: #3498db;
