--- a/css/create-poll.css
+++ b/css/create-poll.css
@@ -1,11 +1,17 @@
+html{
+    height: 100%;
+    background-image: url(https://i.pcmag.com/imagery/articles/009cW7ZeBNU4LFtBCTnxGII-3..v1660320145.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-position: top;
+}
 body {
-    background-color: whitesmoke;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
     padding-bottom: 50px;
-    background-color: #00000014;
+    /* background-color: #00000014; */
     width: 1024px;
     margin-right: auto;
     margin-left: auto;
@@ -19,8 +25,8 @@ body {
 header {
     position: fixed;
     width: 1024px;
-     top: 0;
-    background-color: rgb(0, 0, 0);
+    top: 0;
+    background-color: rgb(0 0 0 / 85%);
     max-height: 100px;
     display: flex;
     justify-content: space-between;
@@ -144,7 +150,7 @@ span {
 }
 
 form {
-    background-color: #f1f1f1;
+    background-color: #f1f1f1eb;
     box-shadow: 0 0 10px black;
     padding: 25px;
     border-radius: 5px;
