--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,13 @@
 
+html{
+    height: 100%;
+    background-image: url(https://i.pcmag.com/imagery/articles/009cW7ZeBNU4LFtBCTnxGII-3..v1660320145.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-position: top;
+}
 body {
-    background-color: whitesmoke;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -9,19 +15,18 @@ body {
     min-height: 300px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #efece9;
 }
 
 .header-container{
     position: fixed;
-   width: 1024px;
+    width: 1024px;
     top: 0;
 }
 
 
 /* Header style */
 header {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0 0 0 / 85%);
     max-height: 100px;
     display: flex;
     justify-content: space-between;
@@ -101,7 +106,7 @@ a {
 
 /* Navbar2 style */
 .nav2 {
-   background-color: whitesmoke;
+    background-color: #f5f5f5d1;
     border-bottom: 1px solid black;
     padding-bottom: 12px;
     padding-top: 12px;
@@ -114,7 +119,7 @@ a {
     padding: 12px 17px;
     background: none;
     border: none;
-    font-family:'Times New Roman', Times, serif;
+    /* font-family:'Times New Roman', Times, serif; */
 }
 
 
@@ -126,10 +131,11 @@ a {
 /* End of navbar2 */
 
 main {
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
+    background-color: #ffffff00;
     min-height: 400px;
-    padding-top: 180px;
-    padding-bottom: 80px;
+    padding-top: 148px;
+    /* padding-bottom: 80px; */
 }
 
 .myPollLogIn a:hover{
@@ -141,13 +147,13 @@ main {
 
 .pollBoxes {
     margin: 15px;
-    border: 1px solid #c3c3e9;
+    border: 3px solid #ffffff;
+    background-color: rgb(255 255 255 / 80%);
     padding: 10px;
     border-radius: 15px;
     width: 43%;
-    background-color: rgba(3, 41, 255, 0.048);
     min-height: 50px;
-    font-family:Arial, Helvetica, sans-serif;
+    box-shadow: 0px 0px 5px white;
 }
 .pollBoxes:hover{
     box-shadow: 0 0 5px black;
@@ -161,11 +167,14 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding-bottom: 100px;
+    padding-top: 40px;
 }
 
 .allpollBoxes a{
     display: contents;
     color:black;
+
 }
 
 @media(max-width:768px) {
