--- a/css/view-poll.css
+++ b/css/view-poll.css
@@ -1,4 +1,15 @@
 
+html{
+    height: 100%;
+    background-image: url(https://i.pcmag.com/imagery/articles/009cW7ZeBNU4LFtBCTnxGII-3..v1660320145.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-position: top;
+}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .title
 {
     text-align: center;
