--- a/css/vote.css
+++ b/css/vote.css
@@ -1,14 +1,20 @@
+
+html{
+    height: 100%;
+    background-image: url(https://i.pcmag.com/imagery/articles/009cW7ZeBNU4LFtBCTnxGII-3..v1660320145.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-position: top;
+}
 body {
-    background-color: whitesmoke;
-    font-family: cursive;
-} */
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .container {
     width: 1024px;
     min-height: 300px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #00000014;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -19,7 +25,7 @@ header {
     position: fixed;
     width: 1024px;
      top: 0;
-    background-color: rgb(0, 0, 0);
+     background-color: rgb(0 0 0 / 90%);
     max-height: 100px;
     display: flex;
     justify-content: space-between;
