--- a/css/index.css
+++ b/css/index.css
@@ -12,9 +12,8 @@ body {
 
 .container {
     width: 1024px;
-    min-height: 300px;
-    margin-right: auto;
-    margin-left: auto;
+    min-height: 500px;
+    margin: 0 auto;
 }
 
 .header-container{
@@ -119,7 +118,6 @@ a {
     padding: 12px 17px;
     background: none;
     border: none;
-    /* font-family:'Times New Roman', Times, serif; */
 }
 
 
@@ -130,14 +128,6 @@ a {
 }
 /* End of navbar2 */
 
-main {
-    /* background-color: whitesmoke; */
-    background-color: #ffffff00;
-    min-height: 400px;
-    padding-top: 148px;
-    /* padding-bottom: 80px; */
-}
-
 .myPollLogIn a:hover{
     color:red;
 }
@@ -145,14 +135,30 @@ main {
     text-decoration:underline;
 }
 
+.allpollBoxes {
+    min-height: 500px;
+    max-width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 125px;
+    padding-top: 175px;
+}
+
+.allpollBoxes a{
+    display: contents;
+    color:black;
+
+}
 .pollBoxes {
-    margin: 15px;
-    border: 3px solid #ffffff;
     background-color: rgb(255 255 255 / 80%);
-    padding: 10px;
-    border-radius: 15px;
-    width: 43%;
+    width: 45%;
     min-height: 50px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 3px solid #ffffff;
+    border-radius: 15px;
     box-shadow: 0px 0px 5px white;
 }
 .pollBoxes:hover{
@@ -163,26 +169,13 @@ main {
     font-size: 15px;
 }
 
-.allpollBoxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-bottom: 100px;
-    padding-top: 40px;
-}
-
-.allpollBoxes a{
-    display: contents;
-    color:black;
-
-}
 
 @media(max-width:768px) {
     .nav2 a {
         padding: 5px 10px;
     }
     .nav2{
-        font-size: 21px;
+        font-size: 25px;
     }
 
     .nav1 {
@@ -193,15 +186,15 @@ main {
         font-size: 19px;
     }
 
-    .pollBoxes{
-        font-size: 25px;
-        width:70%;
-    }
     .allpollBoxes{
         justify-content: space-around;
     }
+    .pollBoxes{
+        font-size: 30px;
+        width:90%;
+    }
     .pollBoxOwner {
-        font-size: 20px;
+        font-size: 25px;
     }
   
 
@@ -222,25 +215,26 @@ main {
     }
 }
 
-@media(max-width:500px) {
+@media(max-width:400px) {
+
     .nav2 {
         text-align: center;
-        font-size: 27px;
+        font-size: 30px;
     }
 
     .nav1 {
-        font-size: 28px;
+        font-size: 30px;
     }
 
     .logo {
         font-size: 24px;
     }
     .pollBoxes {
-        font-size: 25px;
-        width: 70%;
+        font-size: 35px;
+        width: 75%;
     }
     .pollBoxOwner {
-        font-size: 25px;
+        font-size: 30px;
     }
 
     .footer-col {
