--- a/css/view-result.css
+++ b/css/view-result.css
@@ -1,9 +1,9 @@
 html{
     height: 100%;
-    background-image: url(https://i.pcmag.com/imagery/articles/009cW7ZeBNU4LFtBCTnxGII-3..v1660320145.jpg);
+    background-image: url(https://www.slidebackground.com/uploads/light-blue/navy-blue-shades-light-blue-image-background.jpg);
     background-attachment: fixed;
-    background-position: center;
-    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
