--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,7 @@ header {
 header .nav1 {
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: larger;
+    font-size: 25;
 }
 
 header .nav1 a {
@@ -110,13 +110,14 @@ a {
     padding-bottom: 12px;
     padding-top: 12px;
     font-size: 21px;
+    text-align: center;
 }
 
 .nav2 a {
     color: black;
     margin-top: 15px;
-    margin-left: 80px;
-    padding: 12px 17px;
+    /* margin-left: 80px; */
+    padding: 12px 50px;
     background: none;
     border: none;
 }
@@ -137,14 +138,14 @@ a {
 }
 
 .allpollBoxes {
-    min-height: 500px;
+    /* min-height: 500px; */
     max-width: 1024px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding-bottom: 125px;
-    padding-top: 175px;
+    padding-top: 200px;
 }
 
 .allpollBoxes a{
@@ -155,7 +156,7 @@ a {
 .pollBoxes {
     background-color: rgb(255 255 255 / 80%);
     width: 45%;
-    height: 150px;
+    min-height: 150px;
     padding: 10px;
     margin-bottom: 20px;
     border: 3px solid #ffffff;
@@ -172,19 +173,22 @@ a {
 
 
 @media(max-width:768px) {
+    header{
+        max-height: 135px;
+    }
     .nav2 a {
-        padding: 5px 10px;
+        padding: 5px 50px;
     }
     .nav2{
-        font-size: 25px;
+        font-size: 27px;
     }
 
     .nav1 {
-        font-size: 25px;
+        font-size: 27px;
     }
 
     .logo {
-        font-size: 19px;
+        font-size: 21px;
     }
 
     .allpollBoxes{
@@ -193,6 +197,7 @@ a {
     .pollBoxes{
         font-size: 30px;
         width:90%;
+        min-height: 225px;
     }
     .pollBoxOwner {
         font-size: 25px;
@@ -217,14 +222,17 @@ a {
 }
 
 @media(max-width:400px) {
+    header{
+        max-height: 140px;
+    }
 
     .nav2 {
         text-align: center;
-        font-size: 30px;
+        font-size: 29px;
     }
 
     .nav1 {
-        font-size: 30px;
+        font-size: 27px;
     }
 
     .logo {
