changes for response

--- a/css/create-poll.css
+++ b/css/create-poll.css
@@ -64,7 +64,7 @@ header {
 header .nav1 {
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: larger;
+    font-size: 25px;
 }
 
 header .nav1 a {
@@ -102,10 +102,10 @@ a {
 /* End of navbar1 style */
 
 span {
-    padding-top: 4px;
+    padding-top: 10px;
     display: block;
     color: red;
-    font-size: 15px;
+    font-size: 23px;
     width: 100%;
     text-align: left;
     line-height: 11px;
@@ -118,12 +118,12 @@ span {
 
 .end-date-optional small {
     display: block;
-    font-size: 16px;
+    font-size: 21px;
     opacity: 0.7;
 }
 
 #end_date {
-    font-size: 15px;
+    font-size: 20px;
     background-color: #f7f7f7;
 }
 
@@ -154,12 +154,12 @@ form {
     padding: 25px;
     border-radius: 5px;
     margin: 60px auto 50px auto;
-    width: 70%;
-    min-height: 500px;
+    width: 80%;
+    min-height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 23px;
+    font-size: 30px;
 }
 
 #create-poll-form{
@@ -175,7 +175,7 @@ form {
     outline: none;
     border: none;
     background: none;
-    font-size: 17px;
+    font-size: 23px;
 }
 
 .myInput {
@@ -184,7 +184,7 @@ form {
     max-width: 95%;
     justify-content: space-between;
     display: flex;
-    height: 40px;
+    height: 45px;
     border: 1px solid;
 }
 
@@ -202,7 +202,7 @@ div button img {
 }
 
 .addOption {
-    font-size: 15px;
+    font-size: 20px;
     padding: 5px 10px;
     border-radius: 5px;
     border: 1px solid;
@@ -229,7 +229,7 @@ form label {
     background-color: #4caf50;
     color: #fff;
     padding: 12px 20px;
-    font-size: 15px;
+    font-size: 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -246,10 +246,22 @@ form label {
 }
 
 @media(max-width:768px) {
-    form {
-        height: 800px;
-        width: 80%;
+    header{
+        max-height: 135px;
+    }
+    header .nav1{
+        padding-top: 30px;
+        padding-bottom: 30px;
+        font-size: 35px;
+    }
+    span{
         font-size: 30px;
+    }
+    form {
+        height: 880px;
+        width: 90%;
+        font-size: 40px;
+        margin: 110px auto 50px auto;
     }
 
     .myInput {
@@ -257,36 +269,46 @@ form label {
     }
 
     .input-text {
-        font-size: 25px;
+        font-size: 30px;
     }
 
     .addOption {
-        font-size: 25px;
+        font-size: 28px;
     }
 
     .end-date-optional small {
-        font-size: 25px;
+        font-size: 30px;
     }
 
     #end_date {
-        font-size: 25px;
+        font-size: 28px;
     }
 
     .sbt {
-        padding: 7px 30px;
+        padding: 15px 30px;
         font-size: 25px;
     }
 
     div button img {
-        width: 20px;
+        width: 30px;
     }
 }
 
-@media(max-width:400px) {
+@media(max-width:500px) {
+    header{
+        max-height: 150px;
+    }
+    header .nav1 {
+        font-size: 40px;
+    }
+    span{
+        font-size: 35px;
+    }
+
     form {
         height: 1200px;
         width: 90%;
-        font-size: 35px;
+        font-size: 45px;
     }
 
     .myInput {
@@ -294,27 +316,27 @@ form label {
     }
 
     .input-text {
-        font-size: 33px;
+        font-size: 40px;
     }
 
     .addOption {
-        font-size: 30px;
+        font-size: 40px;
     }
 
     .end-date-optional small {
-        font-size: 30px;
+        font-size: 37px;
     }
 
     #end_date {
-        font-size: 30px;
+        font-size: 36px;
     }
 
     .sbt {
-        padding: 9px 30px;
-        font-size: 30px;
+        padding: 15px 30px;
+        font-size: 36px;
     }
 
     div button img {
-        width: 25px;
+        width: 40px;
     }
 }
