--- a/css/create-poll.css
+++ b/css/create-poll.css
@@ -99,6 +99,15 @@ header .nav1 .myButton:hover {
 a {
     text-decoration: none;
 }
+
+/* Hamburger menu styles */
+.burger-icon {
+    display: none;
+    cursor: pointer;
+    font-size: 55px;
+    color: white;
+
+}
 /* End of navbar1 style */
 
 span {
@@ -246,14 +255,50 @@ form label {
 }
 
 @media(max-width:768px) {
+
+
+
+    .burger-icon {
+        margin-right: 15px;
+        margin-left: 800px;
+        display: block;
+    }
+
+    .nav1 {
+        display: none;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .nav1.active {
+        min-height: 320px;
+        right: 276px;
+        background-color: rgb(0 0 0 / 90%);
+        display: flex;
+        position: relative;
+        top: 241px;
+    }
+    header .nav1 .myButton1, header .nav1 .myButton {
+        margin-left: 0px;
+        margin-right: 0px;
+        border: 0px solid white;
+        padding: 10px 100px;
+        font-size: 34px;
+    }
+
+
+
+
+
     header{
         max-height: 135px;
     }
-    header .nav1{
+    /* header .nav1{
         padding-top: 30px;
         padding-bottom: 30px;
         font-size: 35px;
-    }
+    } */
     span{
         font-size: 30px;
     }
@@ -300,6 +345,9 @@ form label {
     }
     header .nav1 {
         font-size: 40px;
+    }
+    .nav1.active {
+        top: 249px;
     }
     span{
         font-size: 35px;
