--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,53 @@ a {
 }
 
 
+
+
+
+/* Hamburger menu styles */
+.burger-icon {
+    display: none;
+    cursor: pointer;
+    font-size: 55px;
+    color: white;
+
+}
+
+
 @media(max-width:768px) {
+
+
+    .burger-icon {
+        margin-right: 15px;
+        margin-left: 800px;
+        display: block;
+    }
+
+    .nav1 {
+        display: none;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .nav1.active {
+        min-height: 320px;
+        right: 300px;
+        background-color: rgb(0 0 0 / 90%);
+        display: flex;
+        position: relative;
+        top: 246px;
+    }
+    header .nav1 .myButton1, header .nav1 .myButton {
+        margin-left: 0px;
+        margin-right: 0px;
+        border: 0px solid white;
+        padding: 10px 100px;
+        font-size: 34px;
+    }
+
+
+
     header{
         max-height: 135px;
     }
@@ -184,11 +230,11 @@ a {
         font-size: 31px;
     }
 
-    header .nav1 {
+    /* header .nav1 {
         padding-top: 30px;
         padding-bottom: 30px;
         font-size: 35px;
-    }
+    } */
 
     .logo {
         font-size: 21px;
@@ -225,7 +271,7 @@ a {
     }
 }
 
-@media(max-width:400px) {
+@media(max-width:500px) {
     header{
         max-height: 150px;
     }
@@ -243,6 +289,9 @@ a {
 
     .logo {
         font-size: 24px;
+    }
+    .nav1.active {
+        top: 250px;
     }
     .allpollBoxes{
         padding-top: 260px;
