--- a/css/vote.css
+++ b/css/vote.css
@@ -99,6 +99,15 @@ header .nav1 .myButton:hover {
 a {
     text-decoration: none;
 }
+
+/* Hamburger menu styles */
+.burger-icon {
+    display: none;
+    cursor: pointer;
+    font-size: 55px;
+    color: white;
+
+}
 /* End of navbar1 style */
 
 #customAlert {
@@ -174,6 +183,9 @@ input[type="submit"] {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+#msgOwner{
+    font-size: 20px;
+}
 
 input[type="submit"]:hover {
     background-color: #45a049;
@@ -185,18 +197,55 @@ input[type="submit"]:hover {
 }
 
 @media(max-width:768px) {
+
+
+
+    .burger-icon {
+        margin-right: 15px;
+        margin-left: 800px;
+        display: block;
+    }
+
+    .nav1 {
+        display: none;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .nav1.active {
+        /* right: 300px; */
+        min-height: 320px;
+        right: 277px;
+        background-color: rgb(0 0 0 / 90%);
+        display: flex;
+        position: relative;
+        top: 241px;
+    }
+    header .nav1 .myButton1, header .nav1 .myButton {
+        margin-left: 0px;
+        margin-right: 0px;
+        border: 0px solid white;
+        padding: 10px 100px;
+        font-size: 34px;
+    }
+
+
+
+
+
     header{
         max-height: 135px;
     }
     #vote-con{
-        height: 850px;
+        min-height: 850px;
         width: 90%;
     }
-    header .nav1 {
+    /* header .nav1 {
         padding-top: 30px;
         padding-bottom: 30px;
         font-size: 35px;
-    }
+    } */
     .status-enddate{
         font-size: 30px;
     }
@@ -213,6 +262,9 @@ input[type="submit"]:hover {
     .vote-button span{
         font-size: 30px;
     }
+    #msgOwner{
+        font-size: 25px;
+    }
 }
 
 @media(max-width:500px) {
@@ -222,8 +274,11 @@ input[type="submit"]:hover {
     header .nav1 {
         font-size: 40px;
     }
+    .nav1.active {
+        top: 250px;
+    }
     #vote-con{
-        height: 900px;
+        min-height: 900px;
         width: 90%;
         margin: 150px auto 0 auto;
     }
@@ -239,9 +294,13 @@ input[type="submit"]:hover {
     }
 
     .vote-button input{
-        font-size: 36px;
+        font-size: 30px;
     }
     .vote-button span{
         font-size: 40px;
+    }
+
+    #msgOwner{
+        font-size: 26px;
     }
 }
