--- a/css/create-poll.css
+++ b/css/create-poll.css
@@ -303,7 +303,7 @@ form label {
         font-size: 30px;
     }
     form {
-        height: 880px;
+        min-height: 880px;
         width: 90%;
         font-size: 40px;
         margin: 110px auto 50px auto;
