--- a/css/signup-login.css
+++ b/css/signup-login.css
@@ -1,9 +1,10 @@
 html{
     height: 100%;
-    background-image: url(https://www.slidebackground.com/uploads/light-blue/navy-blue-shades-light-blue-image-background.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    background: rgb(0,138,255);
+    background: radial-gradient(circle, rgba(0,138,255,1) 0%, rgba(0,0,0,1) 100%);
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
