--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: rgb(0 0 0 / 90%);
+    background-color: black;
     position: absolute;
     z-index: -1;
     width: 1024px;
