--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ body {
 
 /* Header style */
 header {
-    background-color: rgb(0 0 0 / 90%);
+    background-color: black;
     max-height: 100px;
     display: flex;
     justify-content: space-between;
@@ -80,6 +80,7 @@ header .nav1 .myButton1 {
     border: 1px solid white;
     padding: 6px 25px;
     border-radius: 5px;
+    transition: all 0.5s ease;
 }
 
 header .nav1 .myButton1:hover {
@@ -92,6 +93,7 @@ header .nav1 .myButton {
     border: 1px solid white;
     padding: 6px 25px;
     border-radius: 5px;
+    transition: all 0.5s ease;
 }
 
 header .nav1 .myButton:hover {
