--- a/css/vote.css
+++ b/css/vote.css
@@ -26,7 +26,7 @@ header {
     position: fixed;
     width: 1024px;
     top: 0;
-    background-color: rgb(0 0 0 / 90%);
+    background-color: black;
     max-height: 100px;
     display: flex;
     justify-content: space-between;
@@ -78,6 +78,7 @@ header .nav1 .myButton1 {
     border: 1px solid white;
     padding: 6px 25px;
     border-radius: 5px;
+    transition: all 0.5s ease;
 }
 
 header .nav1 .myButton1:hover {
@@ -90,6 +91,7 @@ header .nav1 .myButton {
     border: 1px solid white;
     padding: 6px 25px;
     border-radius: 5px;
+    transition: all 0.5s ease;
 }
 
 header .nav1 .myButton:hover {
