some changes on index.php if there is no polls display msg

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: black;
-    position: absolute;
+    /* position: absolute; */
     z-index: -1;
     width: 1024px;
 }
